<resources>
    <string name="app_name">BankAppNew</string>
    <string name="worldskills_bank">WorldSkills Bank</string>
    <string name="todo">TODO</string>
    <string name="courses">Курсы валют</string>
    <string name="atms">Отделения и банкоматы</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="auth">АВТОРИЗАЦИЯ</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="dialogs">Диалоги</string>
    <string name="main_window">Главный</string>
    <string name="paymnets">Платежи</string>
    <string name="history">История</string>
    <string name="debt_card">Дебетовая карта</string>
    <string name="cur_account">Текущий счет</string>
    <string name="cash_credit">Кредит наличными</string>
    <string name="right_arrow"><![CDATA[>]]></string>
</resources>