<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".signin.acitvities.MainActivity">

    <ImageButton
        android:id="@+id/a_main_courses"
        android:layout_width="374dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="264dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/white_rect"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/a_main_enter"
        android:layout_width="374dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="416dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:backgroundTint="@color/blue_rect"
        android:text="Войти"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="73dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_museum_100"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="32dp"
        android:text="@string/worldskills_bank"
        android:textColor="@color/ws_bank"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/a_main_atms"
        android:layout_width="374dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="152dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/white_rect"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:text="@string/courses"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/a_main_courses"
        app:layout_constraintTop_toTopOf="@+id/a_main_courses" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/a_main_atms"
        app:layout_constraintTop_toTopOf="@+id/a_main_atms"
        app:srcCompat="@mipmap/ic_chip_100"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="28dp"
        android:text="@string/atms"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/a_main_atms"
        app:layout_constraintTop_toTopOf="@+id/a_main_atms" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/a_main_courses"
        app:layout_constraintTop_toTopOf="@+id/a_main_courses"
        app:srcCompat="@mipmap/ic_money"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/a_main_current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/a_main_courses"
        app:layout_constraintTop_toTopOf="@+id/a_main_courses" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/usd"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/a_main_courses"
        app:layout_constraintTop_toTopOf="@+id/a_main_courses" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="64dp"
        android:text="@string/eur"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/a_main_courses"
        app:layout_constraintTop_toTopOf="@+id/a_main_courses" />

    <TextView
        android:id="@+id/a_main_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="64dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/a_main_courses"
        app:layout_constraintTop_toTopOf="@+id/a_main_courses" />

    <TextView
        android:id="@+id/a_main_eur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="287dp"
        android:layout_marginTop="64dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/a_main_courses"
        app:layout_constraintTop_toTopOf="@+id/a_main_courses" />
</androidx.constraintlayout.widget.ConstraintLayout>